Processing of rotation of the screen is added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".PhotoPageActivity"/>
+    <activity
+      android:name=".PhotoPageActivity"
+      android:configChanges="keyboardHidden|orientation|screenSize"/>
 
     <service android:name=".PollService"/>
 
